bridges/jac-bridge/tests/ui/unsupported_return_type.stderr
error: unsupported return type: `char`
 --> tests/ui/unsupported_return_type.rs:9:30
  |
9 |         pub fn bad(&self) -> char {
  |                              ^^^^
